--- a/src/config/routes-config.json
+++ b/src/config/routes-config.json
@@ -483,6 +483,14 @@
         "requiresAuth": true
       }
     },
+    "ExpertApproval": {
+      "path": "/crm/strategic-projects/expert-approval",
+      "component": "@/pages/crm/strategic-projects/ExpertApproval.vue",
+      "meta": {
+        "title": "Экспертная оценка проектов",
+        "requiresAuth": true
+      }
+    },
 
     "ProjectManagement": {
       "path": "/crm/project-management",
