feat: первая версия модуля анализа поверхности.

--- a/src/config/menu-config.json
+++ b/src/config/menu-config.json
@@ -335,6 +335,12 @@
           "name": "Мои задачи"
         }
       ]
+    },
+    
+    {
+      "icon": "Microscope",
+      "routeName": "AnalysisPorosity",
+      "title": "Анализ пористости поверхности"
     }
   ]
 } 
