feat: добавление страницы дашбордов и обновление конфигурации меню

--- a/src/config/menu-config.json
+++ b/src/config/menu-config.json
@@ -201,6 +201,12 @@
           "page": "charts",
           "isOffcanvas": true
         }
+        ,
+        {
+          "name": "Дашборды",
+          "page": "dashboards",
+          "isOffcanvas": true
+        }
       ]
     },
     {
