--- a/src/config/routes-config.json
+++ b/src/config/routes-config.json
@@ -727,9 +727,9 @@
         "requiresAuth": true
       }
     },
-    "StorageList": {
-      "path": "/bi/storagelist",
-      "component": "@/modules/bi/StorageListPage.vue",
+    "DashboardList": {
+      "path": "/bi/dashboardlist",
+      "component": "@/modules/bi/DashboardListPage.vue",
       "meta": {
         "requiresAuth": true
       }
