feat: Заготовка страницы под создание дашбордов

--- a/src/config/routes-config.json
+++ b/src/config/routes-config.json
@@ -727,6 +727,13 @@
         "requiresAuth": true
       }
     },
+    "DashboardPage": {
+      "path": "/bi/dashboard/new",
+      "component": "@/modules/bi/DashboardPage.vue",
+      "meta": {
+        "requiresAuth": true
+      }
+    },
     "DashboardList": {
       "path": "/bi/dashboardlist",
       "component": "@/modules/bi/DashboardListPage.vue",
